<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/dotCaptureButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/dot_capture_select_button_text"
            app:layout_constraintBottom_toTopOf="@+id/lineCaptureButton"
            app:layout_constraintEnd_toEndOf="@+id/lineCaptureButton"
            app:layout_constraintStart_toStartOf="@+id/lineCaptureButton" />

        <Button
            android:id="@+id/lineCaptureButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/line_capture_select_button_text"
            app:layout_constraintBottom_toTopOf="@+id/rectangleCaptureButton"
            app:layout_constraintEnd_toEndOf="@+id/rectangleCaptureButton"
            app:layout_constraintStart_toStartOf="@+id/rectangleCaptureButton" />

        <Button
            android:id="@+id/rectangleCaptureButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rectangle_capture_select_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/currentPlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/current_player_text_default"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>